@@ -13,6 +13,8 @@ Changes:
     * [Bugfix] Fixed the release date in the changelog of the 5.1.3.
     * [Bugfix] Fixed an error when trying to access a protected property with the fluid debugger.
     * [Bugfix] Removed a console.log from the Index.js.
+    * [Bugfix] Add the missing "kreXX Messages" to the translation.
+    * [Bugfix] Remove HTML tags from the shell output.
     * [Bugfix][Change] Removed the constants-analysis from the fluid debugger. Constants are not reachable and hold little to no information.
     * [Bugfix][Change] Use the application context to detect a productive environment instead of the LivePreset.
 
