@@ -63,6 +63,7 @@ configErrorDebugBlacklist = "Wrong configuration for: '%s => %s'! The debugmetho
 configErrorDebugInvalid = "Wrong configuration for: '%s => %s'! '%s' is not a valid method. The configured setting was not applied!"
 configErrorLangInvalid = "Wrong configuration for: '%s => %s'! The language '%s' is not available. The configured setting was not applied!"
 
+shellFeedbackHeadline = "kreXX messages"
 maximumLevelReached1 = "Maximum nesting level for the analysis was reached. I will not go any further."
 maximumLevelReached2 =  "To increase this value, change the Prune output => level setting."
 stringTooLarge = "This is a very large string with a none-standard encoding.<br /> For security reasons, we must escape it, but it is too large for this. Sorry."
@@ -267,6 +268,7 @@ configErrorDebugInvalid = "Falsche Konfiguration für: '%s => %s'! '%s' ist kein
 configErrorLangInvalid = "Falsche Konfiguration für: '%s => %s'! Die Sprache '%s' steht nicht zur Verfügung. Dieses Setting wurde nicht angewendet!"
 
 unhandedOtherHelp = "Das hier ist ein (bisher) nicht analysierbarer Variablentyp. Wenn Sie das hier lesen, machen Sie bitte ein Ticket in unserem GitHub Bug Tracker auf, damit wir diesen Typ mit aufnehmen können."
+shellFeedbackHeadline = "kreXX Messages"
 maximumLevelReached1 = "Maximale Verschachtelung erreicht."
 maximumLevelReached2 =  "Um diesen Wert zu erhöhen muss der Wert 'Ausgabe begrenzen => Maximale Verschachtelung' erhöht werden."
 stringTooLarge = "Das hier ist ein extrem großer String, in einer Nicht-Standard-Kodierung.<br /> Aus Sicherheitsgründen müssten wir ihn escapen, aber er ist einfach zu groß dafür. Sorry."
