@@ -1,6 +1,8 @@
 5.0.8
 - Bugfix: The serialized string analysis was not thorough enough
   to detect all possible candidates.
+- Bugfix: Add the missing "kreXX Messages" to the translation.
+- Bugfix: Remove HTML tags from the shell output.
 
 5.0.7
 - Bugfix: The XML analysis does not recognise a broken XML string.
